# black_magic_project

./: README.md
Rust-poc/: .gitignore  Cargo.toml
Rust-poc/wavelets/cdf53/: Cargo.toml
Rust-poc/wavelets/cdf53/src/: lib.rs
Rust-poc/wavelets/haar_wavelet/: Cargo.toml  README.md
Rust-poc/wavelets/haar_wavelet/src/: haar.rs  main.rs  wavelet_tree.rs
